# bot_for_test

./: bot.py  creds.json  pyproject.toml  Вопросы.csv
backend/: __init__.py  config.py  objects.py
backend/addition/: log_configurate.py  sheets_editor.py
backend/bussines/: Markup.py
backend/request/: eysenck_test.py  request.py
frontend/: __init__.py  low.py  menu.py  question.py
